# event-driven-ecommerce

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: architecture.md
docs/adr/: 0000-record-architecture-decisions.md  template.md
services/webapp/: Dockerfile  README.md  pyproject.toml
services/webapp/webapp/: __init__.py  config.py  main.py
