[project]
name = "webapp"
version = "0.1.0"
description = "Phase 1 webapp — FastAPI + HTMX storefront, event source for the platform."
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115,<0.130",
  "uvicorn[standard]>=0.30,<0.40",
  "jinja2>=3.1,<4.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "alembic>=1.13,<2.0",
  "pydantic-settings>=2.2,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "uuid-utils>=0.9,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "httpx>=0.27,<1.0",
  "testcontainers[postgresql]>=4.0,<5.0",
  "mypy>=1.10,<2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["webapp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
